More Bugfixes from Side Nav (#1162)
* Fixed a bug where the bottom of the page could be cut off

* Adjusted all the headings to h2, which looks better

* Refactored GetSeriesDetail to actually map the names inside the code so the UI just displays.

* Put in some basic improvements to OPDS by using Series Detail type layout, but this only reduces one click.

* Fixed a bug where offset from scrollbar fix causes readers to be cutoff.

--- a/UI/Web/src/theme/utilities/_global.scss
+++ b/UI/Web/src/theme/utilities/_global.scss
@@ -8,7 +8,7 @@ body {
   color-scheme: var(--color-scheme);
   max-height: 100%;
   overflow-y: auto;
-  margin-top: 56px;
+  //margin-top: 56px; // Set by nav service
 }
 
 
